# learnCpp

./: .gitignore  bigNotes.md  run  test.cpp
BeforeYH/Array&PrototypeFunc/: arrays.cpp
BeforeYH/Strings/: hi.cpp  stringsTest1.cpp
CppJourney/EXAMPLES/: print.cpp  random.cpp  sizelimits.cpp  unsupport.cpp
NOTES/: 1NasilCalis.MD  PCnotes.md  w1and2.md  w51Notes.html  w51Notes.md  week5_6.html  week5_6.md  week6.html  week6.md  week_10.md  week_11.md  week_12.md  week_15-18.md
WEEK4/: note.md
WEEK4/EXAM/: exam.hpp  run  test.cpp
WEEK4/EXERCISES/: uncopyable_Movable_Dynamic_Array.cpp
WEEK4/EXERCISES/uncopyable_Movable_Dynamic_Array/: run  test.cpp  theStack.hpp
WEEK4/SCHOOL/: EXEPTION_HANDLING.CPP  run
WEEK_5_6/: fizzbuzz.cpp  fizzbuzz.h  test.cpp
WEEK_5_6/EXAMPLES/fizzbuzz/: run
WEEK_5_6/EXAMPLES/gmock/: stack.cpp  stack.h  test.cpp
WEEK_5_6/EXAMPLES/gtest1/: CMakeLists.txt  stack.h  test.cpp
WEEK_5_6/EXAMPLES/gtest2/: CMakeLists.txt  stack.h  test.cpp
WEEK_5_6/EXERCISES/Exercise_3_GoogleTest/: CMakeLists.txt  greet.cpp  greet.hpp  onWindows.cpp  run  test.cpp  testGoogletest.cpp
WEEK_5_6/EXERCISES/exercise-1/: Makefile
WEEK_5_6/InSCHOOL/: CMakeLists.txt  MakeFile  run
WEEK_5_6/InSCHOOL/FIZZBUZZ_AtSchool/: CMakeCache.txt  fizzbuzz.h  main.cpp  run  test.cpp
WEEK_5_6/InSCHOOL/IMemory/: CMakeLists.txt  SOURCE.md  stack.h  test.cpp
WEEK_5_6/InSCHOOL/examples/: run  test.cpp
WEEK_5_6/InSCHOOL/examples/fizzbuzz/: fizzbuzz.cpp
WEEK_5_6/InSCHOOL/fizzbuzz/: MakeFile
WEEK_5_6/SOLUTIONS/exercise-1/: Makefile
WEEK_5_6/SOLUTIONS/exercise-2/: Makefile
WEEK_5_6/SOLUTIONS/exercise-3/: CMakeLists.txt  greet.cpp  test.cpp
WEEK_5_6/SOLUTIONS/exercise-4/: CMakeLists.txt  test.cpp
WEEK_5_6/SOLUTIONS/exercise-4/list/: list.cpp  list.h
examLinkedList/: MakeFile  queue.h  test.cpp
week11/: run
week11/Examples/: 1-race-cond.cpp  12-ping-pong.cpp  13-ping-pong.cpp  2-atomic.cpp  3-mutex.cpp  4-performance.cpp  5-recursive_mutex.cpp  6-shared_mutex.cpp  7-mutex-locks.cpp  8-shared_lock.cpp  run
week11/Examples/Practice/: conditional_variable.cpp  run
week11/Exercises/: exer_1_PingPong.cpp  exer_2_123.cpp  exer_3_threadSafe_uncopyable_templateClass_usingArray.cpp  run
week11/Exercises/Solution/: exercise-3.cpp
week11/inClass/: thread.cpp
week12/Examples/mcxn236/: CMakeLists.txt
week12/Exercises/: reverseString.cpp  run
week12_14/Examples/mcxn236/: mcux_include.json
week12_14/Exercises/: reverseStr.c  reverseString.cpp
week12_14/Exercises/ESP32PrimeNum/: CMakeLists.txt
week12_14/Exercises/FirstESP32project/: CMakeLists.txt
week12_14/Exercises/esp32_exer4_intervalBlink/: CMakeLists.txt
week12_14/Exercises/esp32project1/: CMakeLists.txt
week12_14/Exercises/exercise2DateMenu/: CMakeLists.txt
week12_14/Solution/exercise-1/: CMakeLists.txt
week12_14/Solution/exercise-2/: CMakeLists.txt  platformio.ini
week12_14/Solution/exercise-3/: CMakeLists.txt  platformio.ini
week12_14/Solution/exercise-4/: CMakeLists.txt
week12_14/Solution/exercise-5/: CMakeLists.txt
week12_14/Solution/exercise-6/: CMakeLists.txt
week12_14/Solution/exercise-7/: CMakeLists.txt
week12_14/Solution/exercise-8/: exercise-8.code-workspace
week12_14/Solution/exercise-9/: CMakeLists.txt
week2and3/: e21StackWithClass.cpp
week2and3/EXAMPLES/: resource.cpp  singleton.cpp
week2and3/EXERCISES/e21_Stack/: e21_Stack.cpp  e21_Stack.hpp  test.cpp
week2and3/PRACTICE/: Constructor.cpp  Inheritence.cpp  Mutators.cpp  Non_member_func_calcArea.cpp  Operator.cpp  OperatorOverloading.cpp  Singleton.cpp  e21StackWithClass.cpp  inClass.cpp  run
week2and3/SOLUTIONS/: exercise-26.cpp  exercise-28.cpp  exercise-29.cpp
week2and3/atSCHOOL/Template/: main.cpp  (+1 more)
week2and3/multipleInstanceModule/: person.h
week50and51/: note.md  test.cpp  vectorStack.cpp
week50and51/EXAMPLES/: arr-ptr.cpp  calculator.cpp  dowhile.cpp  enum.cpp  for.cpp  func-arr.cpp  func.cpp  goto.cpp  pointer-1.cpp  pointer-2.cpp  random.cpp  string.cpp  struct1.cpp  struct2.cpp  switch.cpp  union.cpp  while.cpp
week50and51/Exercises/: E4Uppercase_RandomNumbers.cpp  E5randomNum_Generator.cpp  e10MatrixArrRndmNums.cpp  e10mtrxArrRandomNummer.cpp  e11ArrOfPersonsSortByID.cpp  e12DateFormatChecker.c++  e13toUpperAndLowerCaseConverter.cpp  e14FuncFillPrintSwapSortBool.cpp  e15isPrimeNumCheck.cpp  e16UniqueRandomNums.cpp  e17RecursionDigitCounter.cpp  e18MultiInstanceStack.cpp  e7rndmNumGuesser.cpp  e8DecimalToBitWBitwiseOperation.cpp  e9RandomArrSort.cpp  run
week50and51/SOLUTIONS/: exercise-10.cpp
week8_10/EXAMPLES/: example-2.py  example-3.py  example-4.py  example-7.py  example.py
week8_10/EXERCISES/: exer_1_Learn_syntax.py  exer_2_Input_reverse.py  exer_3_Print_index_of_uppercase.py  exer_4_factorial.py  exer_5_table.py  exer_6_OS_Compile_C.py  exer_7_Format_checker.py  exer_8.MD  exer_8.py
week8_10/SOLUTIONS/: exercise-10.py  exercise-9.py
week8_10/in_Classroom_examples/: Classes.py  example.py  example_2.py  file.txt
week_7/EXAMINATION/: CMakelists.txt  README.md
week_7/Examples/ci-stack/: CMakeLists.txt  README.md  stack.h  test.cpp
week_7/Examples/ci-stack/.github/workflows/: stack.yml
week_7/Solutions/exercise-7/: CMakeLists.txt  README.md  test.cpp
week_7/Solutions/exercise-7/.github/workflows/: list.yml
week_7/Solutions/exercise-7/list/: list.cpp  list.h
week_7/Solutions/exercise-8/: CMakeLists.txt  README.md  queue.h  test.cpp
week_7/myPractice/: Tuple.cpp  run
(+159 files in other folders)
